Fixed abolute and relative position for hero image on mobile

--- a/assests/styles/styles.css
+++ b/assests/styles/styles.css
@@ -72,11 +72,13 @@ header a {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  position: absolute;
 }
 
 
 .hero-text {
+  position: relative;
+  z-index: 1;
+  bottom: 24rem;
   font-family: 'Raleway', sans-serif;
   max-width: 100%;
   height: 95px;
@@ -84,13 +86,11 @@ header a {
   color: #f5f3f5;
   line-height: 1.6;
   padding: 0.75em;
-  position: relative;
-  z-index: 1;
   text-align: center;
 }
 
 
-/* .about-us-info h2 {
+.about-us-info h2 {
   font-family: 'Montserrat', sans-serif;
   text-align: left;
 }
@@ -103,7 +103,7 @@ header a {
   line-height: 1.6;
   text-align: center;
   font-weight: 400;
-} */
+} 
 
 /* .about-us-info li:nth-of-type(odd) {
   background-color: #576ca8;
